# selfsign

./: .gitignore  Cargo.toml  README.md  todo.md
selfsign-bin/: Cargo.toml  README.md  main.rs
src/: base64.rs  ed25519_dalek.rs  ed25519_sha512.rs  error.rs  hash.rs  hash_function.rs  hashable.rs  hasher.rs  k256.rs  keri_signature.rs  keri_signature_str.rs  keri_verifier.rs  keri_verifier_str.rs  key_type.rs  lib.rs  named_signature_algorithm.rs  preferred_signature_format.rs  preferred_verifier_format.rs  private_key_bytes.rs  secp256k1_sha256.rs  self_sign_and_hashable.rs  self_signable.rs  self_signable_json.rs  signature.rs  signature_algorithm.rs  signature_bytes.rs  signer.rs  verifier.rs  verifier_bytes.rs
tests/: selfsign_tests.rs
