[package]
name = "selfsign-bin"
version = "0.5.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "rand_core"] }
k256 = { version = "0.13.1", features = ["pkcs8"] }
maplit = "1.0.2"
pkcs8 = { version = "0.10.2", features = ["pem", "std"] }
rand = { version = "0.8" }
selfhash = { version = "0.4.0", features = ["blake3", "self-hashable-json"] }
selfsign = { path = "..", features = [
    "ed25519-dalek",
    "k256",
    "self-signable-json",
] }
serde_json = "1.0.106"
serde_json_canonicalizer = "0.2.0"

[[bin]]
name = "selfsign"
path = "main.rs"
